intel-pt.h


struct pt_encoder;
enum pt_error_code {
	pte_ok,
	pte_internal,
	pte_invalid,
	pte_nosync,
	pte_bad_opc,
	pte_bad_packet,
	pte_bad_context,
	pte_eos,
	pte_bad_query,
	pte_nomem,
	pte_bad_config,
	pte_noip,
	pte_ip_suppressed,
	pte_nomap,
	pte_bad_insn,
	pte_no_time,
	pte_no_cbr,
	pte_bad_image,
	pte_bad_lock,
	pte_not_supported,
	pte_retstack_empty,
	pte_bad_retcomp,
	pte_bad_status_update,
	pte_no_enable,
	pte_event_ignored,
	pte_overflow,
	pte_bad_file,
	pte_bad_cpu
};
struct pt_cpu {
	enum pt_cpu_vendor vendor;
	uint16_t family;
	uint8_t model;
	uint8_t stepping;
};
struct pt_errata {
	uint32_t bdm70:1;
	uint32_t bdm64:1;
	uint32_t skd007:1;
	uint32_t skd022:1;
	uint32_t skd010:1;
	uint32_t skl014:1;
	uint32_t apl12:1;
	uint32_t apl11:1;
	uint32_t skl168:1;
	uint32_t skz84:1;
	uint32_t reserved[15];
};
struct pt_conf_flags {
	union {
		struct {
			uint32_t end_on_call:1;
			uint32_t enable_tick_events:1;
			uint32_t end_on_jump:1;
#if (LIBIPT_VERSION >= 0x201)
			uint32_t keep_tcal_on_ovf:1;
			uint32_t enable_iflags_events:1;
#endif
		} block;
		struct {
			uint32_t enable_tick_events:1;
#if (LIBIPT_VERSION >= 0x201)
			uint32_t keep_tcal_on_ovf:1;
			uint32_t enable_iflags_events:1;
#endif
		} insn;
#if (LIBIPT_VERSION >= 0x201)
		struct {
			uint32_t keep_tcal_on_ovf:1;
			uint32_t enable_iflags_events:1;
		} query;
		struct {
			uint32_t keep_tcal_on_ovf:1;
			uint32_t enable_iflags_events:1;
		} event;
#endif 
		uint32_t reserved[4];
	} variant;
};
struct pt_conf_addr_filter {
	union {
		uint64_t addr_cfg;
		struct {
			uint32_t addr0_cfg:4;
			uint32_t addr1_cfg:4;
			uint32_t addr2_cfg:4;
			uint32_t addr3_cfg:4;
		} ctl;
	} config;
	uint64_t addr0_a;
	uint64_t addr0_b;
	uint64_t addr1_a;
	uint64_t addr1_b;
	uint64_t addr2_a;
	uint64_t addr2_b;
	uint64_t addr3_a;
	uint64_t addr3_b;
	uint64_t reserved[8];
};
struct pt_packet_unknown;
struct pt_config {
	size_t size;
	uint8_t *begin;
	uint8_t *end;
	struct {
		int (*callback)(struct pt_packet_unknown *unknown,
				const struct pt_config *config,
				const uint8_t *pos, void *context);
		void *context;
	} decode;
	struct pt_cpu cpu;
	struct pt_errata errata;
	uint32_t cpuid_0x15_eax, cpuid_0x15_ebx;
	uint8_t mtc_freq;
	uint8_t nom_freq;
	struct pt_conf_flags flags;
	struct pt_conf_addr_filter addr_filter;
};
enum pt_packet_type {
	ppt_invalid,
	ppt_unknown,
	ppt_pad,
	ppt_psb,
	ppt_psbend,
	ppt_fup,
	ppt_tip,
	ppt_tip_pge,
	ppt_tip_pgd,
	ppt_tnt_8,
	ppt_tnt_64,
	ppt_mode,
	ppt_pip,
	ppt_vmcs,
	ppt_cbr,
	ppt_tsc,
	ppt_tma,
	ppt_mtc,
	ppt_cyc,
	ppt_stop,
	ppt_ovf,
	ppt_mnt,
	ppt_exstop,
	ppt_mwait,
	ppt_pwre,
	ppt_pwrx,
	ppt_ptw,
#if (LIBIPT_VERSION >= 0x201)
	ppt_cfe,
	ppt_evd,
#endif
};
enum pt_ip_compression {
	pt_ipc_suppressed	= 0x0,
	pt_ipc_update_16	= 0x01,
	pt_ipc_update_32	= 0x02,
	pt_ipc_sext_48		= 0x03,
	pt_ipc_update_48	= 0x04,
	pt_ipc_full		= 0x06
};
enum pt_mode_leaf {
	pt_mol_exec		= 0x00,
	pt_mol_tsx		= 0x20
};
struct pt_packet_tnt {
	uint8_t bit_size;
	uint64_t payload;
};
struct pt_packet_ip {
	enum pt_ip_compression ipc;
	uint64_t ip;
};
struct pt_packet_mode_exec {
	uint32_t csl:1;
	uint32_t csd:1;
#if (LIBIPT_VERSION >= 0x201)
	uint32_t iflag:1;
#endif
};
struct pt_packet_mode_tsx {
	uint32_t intx:1;
	uint32_t abrt:1;
};
struct pt_packet_mode {
	enum pt_mode_leaf leaf;
	union {
		struct pt_packet_mode_exec exec;
		struct pt_packet_mode_tsx tsx;
	} bits;
};
struct pt_packet_pip {
	uint64_t cr3;
	uint32_t nr:1;
};
struct pt_packet_tsc {
	uint64_t tsc;
};
struct pt_packet_cbr {
	uint8_t ratio;
};
struct pt_packet_tma {
	uint16_t ctc;
	uint16_t fc;
};
struct pt_packet_mtc {
	uint8_t ctc;
};
struct pt_packet_cyc {
	uint64_t value;
};
struct pt_packet_vmcs {
	uint64_t base;
};
struct pt_packet_mnt {
	uint64_t payload;
};
struct pt_packet_exstop {
	uint32_t ip:1;
};
struct pt_packet_mwait {
	uint32_t hints;
	uint32_t ext;
};
struct pt_packet_pwre {
	uint8_t state;
	uint8_t sub_state;
	uint32_t hw:1;
};
struct pt_packet_pwrx {
	uint8_t last;
	uint8_t deepest;
	uint32_t interrupt:1;
	uint32_t store:1;
	uint32_t autonomous:1;
};
struct pt_packet_ptw {
	uint64_t payload;
	uint8_t plc;
	uint32_t ip:1;
};
struct pt_packet_cfe {
	enum pt_cfe_type type;
	uint8_t vector;
	uint32_t ip:1;
};
struct pt_packet_evd {
	enum pt_evd_type type;
	uint64_t payload;
};
struct pt_packet_unknown {
	const uint8_t *packet;
	void *priv;
};
struct pt_packet {
	enum pt_packet_type type;
	uint8_t size;
	union {
		struct pt_packet_tnt tnt;
		struct pt_packet_ip ip;
		struct pt_packet_mode mode;
		struct pt_packet_pip pip;
		struct pt_packet_tsc tsc;
		struct pt_packet_cbr cbr;
		struct pt_packet_tma tma;
		struct pt_packet_mtc mtc;
		struct pt_packet_cyc cyc;
		struct pt_packet_vmcs vmcs;
		struct pt_packet_mnt mnt;
		struct pt_packet_exstop exstop;
		struct pt_packet_mwait mwait;
		struct pt_packet_pwre pwre;
		struct pt_packet_pwrx pwrx;
		struct pt_packet_ptw ptw;
#if (LIBIPT_VERSION >= 0x201)
		struct pt_packet_cfe cfe;
		struct pt_packet_evd evd;
#endif
		struct pt_packet_unknown unknown;
	} payload;
};
extern pt_export struct pt_encoder *
pt_alloc_encoder(const struct pt_config *config);
extern pt_export void pt_free_encoder(struct pt_encoder *encoder);
extern pt_export int pt_enc_sync_set(struct pt_encoder *encoder,
				     uint64_t offset);
extern pt_export int pt_enc_get_offset(const struct pt_encoder *encoder,
				       uint64_t *offset);
extern pt_export const struct pt_config *
pt_enc_get_config(const struct pt_encoder *encoder);
extern pt_export int pt_enc_next(struct pt_encoder *encoder,
				 const struct pt_packet *packet);
typedef int (read_memory_callback_t)(uint8_t *buffer, size_t size,
				     const struct pt_asid *asid,
				     uint64_t ip, void *context);