src/bindings.rs

#[test]
fn bindgen_test_layout_pt_packet_unknown() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet_unknown>(),
        16usize,
        concat!("Size of: ", stringify!(pt_packet_unknown))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet_unknown>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet_unknown))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_unknown>())).packet as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_unknown),
            "::",
            stringify!(packet)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet_unknown>())).priv_ as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet_unknown),
            "::",
            stringify!(priv_)
        )
    );
}
#[doc = " An Intel PT packet."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pt_packet {
    #[doc = " The type of the packet."]
    #[doc = ""]
    #[doc = " This also determines the \\@payload field."]
    pub type_: pt_packet_type,
    #[doc = " The size of the packet including opcode and payload."]
    pub size: u8,
    pub payload: pt_packet__bindgen_ty_1,
}
#[doc = " Packet specific data."]
#[repr(C)]
#[derive(Copy, Clone)]
pub union pt_packet__bindgen_ty_1 {
    #[doc = " Packet: tnt-8, tnt-64."]
    pub tnt: pt_packet_tnt,
    #[doc = " Packet: tip, fup, tip.pge, tip.pgd."]
    pub ip: pt_packet_ip,
    #[doc = " Packet: mode."]
    pub mode: pt_packet_mode,
    #[doc = " Packet: pip."]
    pub pip: pt_packet_pip,
    #[doc = " Packet: tsc."]
    pub tsc: pt_packet_tsc,
    #[doc = " Packet: cbr."]
    pub cbr: pt_packet_cbr,
    #[doc = " Packet: tma."]
    pub tma: pt_packet_tma,
    #[doc = " Packet: mtc."]
    pub mtc: pt_packet_mtc,
    #[doc = " Packet: cyc."]
    pub cyc: pt_packet_cyc,
    #[doc = " Packet: vmcs."]
    pub vmcs: pt_packet_vmcs,
    #[doc = " Packet: mnt."]
    pub mnt: pt_packet_mnt,
    #[doc = " Packet: exstop."]
    pub exstop: pt_packet_exstop,
    #[doc = " Packet: mwait."]
    pub mwait: pt_packet_mwait,
    #[doc = " Packet: pwre."]
    pub pwre: pt_packet_pwre,
    #[doc = " Packet: pwrx."]
    pub pwrx: pt_packet_pwrx,
    #[doc = " Packet: ptw."]
    pub ptw: pt_packet_ptw,
    #[doc = " Packet: unknown."]
    pub unknown: pt_packet_unknown,
    _bindgen_union_align: [u64; 2usize],
}
#[test]
fn bindgen_test_layout_pt_packet__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet__bindgen_ty_1>(),
        16usize,
        concat!("Size of: ", stringify!(pt_packet__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).tnt as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(tnt)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).ip as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(ip)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).mode as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(mode)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).pip as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(pip)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).tsc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(tsc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).cbr as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(cbr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).tma as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(tma)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).mtc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(mtc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).cyc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(cyc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).vmcs as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(vmcs)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).mnt as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(mnt)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).exstop as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(exstop)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).mwait as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(mwait)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).pwre as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(pwre)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).pwrx as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(pwrx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).ptw as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(ptw)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet__bindgen_ty_1>())).unknown as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet__bindgen_ty_1),
            "::",
            stringify!(unknown)
        )
    );
}
#[test]
fn bindgen_test_layout_pt_packet() {
    assert_eq!(
        ::std::mem::size_of::<pt_packet>(),
        24usize,
        concat!("Size of: ", stringify!(pt_packet))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_packet>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_packet))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet>())).size as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_packet>())).payload as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_packet),
            "::",
            stringify!(payload)
        )
    );
}
extern "C" {
    #[doc = " Allocate an Intel PT packet encoder."]
    #[doc = ""]
    #[doc = " The encoder will work on the buffer defined in \\@config, it shall contain"]
    #[doc = " raw trace data and remain valid for the lifetime of the encoder."]
    #[doc = ""]
    #[doc = " The encoder starts at the beginning of the trace buffer."]
    pub fn pt_alloc_encoder(config: *const pt_config) -> *mut pt_encoder;
}
extern "C" {
    #[doc = " Free an Intel PT packet encoder."]
    #[doc = ""]
    #[doc = " The \\@encoder must not be used after a successful return."]
    pub fn pt_free_encoder(encoder: *mut pt_encoder);
}
extern "C" {
    #[doc = " Hard set synchronization point of an Intel PT packet encoder."]
    #[doc = ""]
    #[doc = " Synchronize \\@encoder to \\@offset within the trace buffer."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_eos if the given offset is behind the end of the trace buffer."]
    #[doc = " Returns -pte_invalid if \\@encoder is NULL."]
    pub fn pt_enc_sync_set(encoder: *mut pt_encoder, offset: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the current packet encoder position."]
    #[doc = ""]
    #[doc = " Fills the current \\@encoder position into \\@offset."]
    #[doc = ""]
    #[doc = " This is useful for reporting errors."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@encoder or \\@offset is NULL."]
    pub fn pt_enc_get_offset(encoder: *const pt_encoder, offset: *mut u64)
        -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pt_enc_get_config(encoder: *const pt_encoder) -> *const pt_config;
}
extern "C" {
    #[doc = " Encode an Intel PT packet."]
    #[doc = ""]
    #[doc = " Writes \\@packet at \\@encoder's current position in the Intel PT buffer and"]
    #[doc = " advances the \\@encoder beyond the written packet."]
    #[doc = ""]
    #[doc = " The \\@packet.size field is ignored."]
    #[doc = ""]
    #[doc = " In case of errors, the \\@encoder is not advanced and nothing is written"]
    #[doc = " into the Intel PT buffer."]
    #[doc = ""]
    #[doc = " Returns the number of bytes written on success, a negative error code"]
    #[doc = " otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_bad_opc if \\@packet.type is not known."]
    #[doc = " Returns -pte_bad_packet if \\@packet's payload is invalid."]
    #[doc = " Returns -pte_eos if \\@encoder reached the end of the Intel PT buffer."]
    #[doc = " Returns -pte_invalid if \\@encoder or \\@packet is NULL."]
    pub fn pt_enc_next(encoder: *mut pt_encoder, packet: *const pt_packet)
        -> ::std::os::raw::c_int;
}
